subida de los htmls el head y el footer, todo lo que he podido sacar

--- a/ApiMealsAngular_v6/src/app/contact/contact.component.html
+++ b/ApiMealsAngular_v6/src/app/contact/contact.component.html
@@ -4,6 +4,7 @@
         Contacto
     </h2>
 </section>
+<app-header></app-header>
 
 <!-- Contact form -->
 <section class="section-contact bg1-pattern p-t-90 p-b-113">
@@ -74,3 +75,4 @@
         </div>
     </div>
 </section>
+<app-footer></app-footer>
