--- a/ApiMealsAngular_v6/src/app/index/index.component.html
+++ b/ApiMealsAngular_v6/src/app/index/index.component.html
@@ -2,17 +2,20 @@
 <section class="section-slide">
         <div class="wrap-slick1">
             <div class="slick1">
-                <div class="item-slick1 item1-slick1" style="background-image: url(images/indexCarrusel01.jpeg);">
+                
+                <app-header></app-header>
+
+                <div class="item-slick1 item1-slick1" style="background-image: url(../../assets/images/indexCarrusel01.jpeg);">
                     <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
-                        <span class="caption1-slide1 txt1 t-center animated visible-false m-b-25" data-appear="fadeInDown">
+                        <span class="caption1-slide1 tit1 t-center animated m-b-37" data-appear="fadeInDown">
                             Bienvenido a
                         </span>
     
-                        <h2 class="caption2-slide1 tit1 t-center animated visible-false m-b-37" data-appear="fadeInUp">
+                        <h2 class="caption2-slide1 tit1 t-center animated m-b-37" data-appear="fadeInUp">
                             Api Meals
                         </h2>
     
-                        <div class="wrap-btn-slide1 animated visible-false" data-appear="zoomIn">
+                        <div class="wrap-btn-slide1 animated " data-appear="zoomIn">
                             <!-- Button1 -->
                             <a href="menu.html" class="btn1 flex-c-m size6 txt5 trans-0-4">
                                 Nuestros menus
@@ -23,16 +26,16 @@
     
                 <div class="item-slick1 item2-slick1" style="background-image: url(../../assets/images/indexCarruselHome_2.jpg);">
                     <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
-                        <span class="caption1-slide1 txt1 t-center animated visible-false m-b-15" data-appear="rollIn">
+                        <span class="caption1-slide1 txt1 t-center animated  m-b-15" data-appear="rollIn">
                             Haga su pedido
                         </span>
     
-                        <h2 class="caption2-slide1 tit1 t-center animated visible-false m-b-37" data-appear="lightSpeedIn">
+                        <h2 class="caption2-slide1 tit1 t-center animated  m-b-37" data-appear="lightSpeedIn">
                             o registrese
                 
                         </h2>
     
-                        <div class="wrap-btn-slide1 animated visible-false" data-appear="slideInUp">
+                        <div class="wrap-btn-slide1 animated " data-appear="slideInUp">
                             <!-- Button1 -->
                             <a href="user.html" class="btn1 flex-c-m size5 txt3 trans-0-4 ">
                                 Iniciar sesion
@@ -45,13 +48,13 @@
                     </div>
                 </div>
     
-                <div class="item-slick1 item3-slick1" style="background-image: url(images/icons/bgindex1.jpg);">
+                <div class="item-slick1 item3-slick1" style="background-image: url(../../assets/images/icons/bgindex1.jpg);">
                     <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
-                        <span style="" class="caption1-slide1 txt1 t-center animated visible-false m-b-15"  data-appear="rotateInDownLeft">
+                        <span class="caption1-slide1 txt1 t-center animated  m-b-15"  data-appear="rotateInDownLeft">
                             Pide sin registrarte
                         </span>
     
-                        <div class="wrap-btn-slide1 animated visible-false" data-appear="rotateIn">
+                        <div class="wrap-btn-slide1 animated " data-appear="rotateIn">
                             <!-- Button1 -->
                             <a href="pedidos.html" class="btn1 flex-c-m size1 txt3 trans-0-4">
                                 Pedir
@@ -103,7 +106,7 @@
     
     <!-- Intro -->
     <section class="section-intro">
-        <div class="header-intro parallax100 t-center p-t-135 p-b-158" style="background-image: url(images/indexDiscoverOurMenu2.jpeg);">
+        <div class="header-intro parallax100 t-center p-t-135 p-b-158" style="background-image: url(../../assets/images/indexDiscoverOurMenu2.jpeg);">
             <span class="tit2 p-l-15 p-r-15">
                 Descubre
             </span>
@@ -310,11 +313,11 @@
             <div class="item-slick3 item1-slick3">
                 <div class="wrap-content-slide3 p-b-50 p-t-50">
                     <div class="container">
-                        <div class="pic-review size14 bo4 wrap-cir-pic m-l-r-auto animated visible-false" data-appear="zoomIn">
+                        <div class="pic-review size14 bo4 wrap-cir-pic m-l-r-auto animated" data-appear="zoomIn">
                             <img src="../../assets/images/avatar-01.jpg" alt="IGM-AVATAR">
                         </div>
     
-                        <div class="content-review m-t-33 animated visible-false" data-appear="fadeInUp">
+                        <div class="content-review m-t-33 animated" data-appear="fadeInUp">
                             <p class="t-center txt12 size15 m-l-r-auto">
                                 “ We are lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tellus sem, mattis in pre-tium nec, fermentum viverra dui ”
                             </p>
@@ -328,7 +331,7 @@
                             </div>
     
                             <div class="more-review txt4 t-center animated visible-false m-t-32" data-appear="fadeInUp">
-                                Marie Simmons ˗ New York
+                                Marie Simmons ? New York
                             </div>
                         </div>
                     </div>
@@ -356,7 +359,7 @@
                             </div>
     
                             <div class="more-review txt4 t-center animated visible-false m-t-32" data-appear="fadeInUp">
-                                Marie Simmons ˗ New York
+                                Marie Simmons ? New York
                             </div>
                         </div>
                     </div>
@@ -384,7 +387,7 @@
                             </div>
     
                             <div class="more-review txt4 t-center animated visible-false m-t-32" data-appear="fadeInUp">
-                                Marie Simmons ˗ New York
+                                Marie Simmons ? New York
                             </div>
                         </div>
                     </div>
@@ -399,7 +402,7 @@
     
     
     <!-- Video -->
-    <section class="section-video parallax100" style="background-image: url(/../../assets/images/indexDiscoverOurVideo.jpeg);">
+    <section class="section-video parallax100" style="background-image: url(../../assets/images/indexDiscoverOurVideo.jpeg);">
     <div class="content-video t-center p-t-225 p-b-250">
         <span class="tit2 p-l-15 p-r-15">
             Discover
@@ -435,3 +438,4 @@
         </button>
     </form>
     </div>
+    <app-footer></app-footer>
