--- a/ApiMealsAngular_v6/src/app/User/user.component.html
+++ b/ApiMealsAngular_v6/src/app/User/user.component.html
@@ -1,5 +1,5 @@
-<app-navbar></app-navbar>
-<div class="container">
+<app-header></app-header>
+<!-- <div class="container">
     <div class="row">
         <div class="col-lg-12 p-b-30">
             <div class="row">
@@ -35,8 +35,8 @@
                     <div class="row">
                         <button type="button" class="btn btn-primary" (click)="logOut()">Cerrar sesión</button>
                     </div>
-                </div>
-                <div *ngIf="!loginService.isLoged" class="col-lg-10 mx-auto">
+                </div> 
+                 <div *ngIf="!loginService.isLoged" class="col-lg-10 mx-auto">
                     <div class="t-center">
 						<span class="tit2 t-center">
 							Usuario
@@ -45,16 +45,9 @@
 							Iniciar Sesión
 						</h3>
                     </div>
-                    <form class="wrap-form-reservation size22 m-l-r-auto" action="/user" method="post">
-                        <input type="text" placeholder="&#128272; Usuario" name="user">
-                        <input type="password" placeholder="&#128272; Contraseña" name="password">
-                        <input type="submit" value="Enviar">
-                        <a [routerLink]="['/register']" class="btn3 flex-c-m size18 txt11 trans-0-4 m-10">
-                            Registrarse
-                        </a>
-                    </form>
+                    <app-login></app-login>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</div> -->
